# huffman

./: CMakeLists.txt  README.md  huffman-cli.cpp  huffman_testing.cpp
huffman_lib/: consts.h  huffman.cpp  huffman.h
huffman_lib/basic_structure/: code.cpp  code.h  counter.cpp  counter.h  tree.cpp  tree.h
huffman_lib/data_interface/: decoder.cpp  decoder.h  encoder.cpp  encoder.h
huffman_lib/file_interface/: file_decoder.cpp  file_decoder.h  file_encoder.cpp  file_encoder.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h
